# RedHat-vLLM-inferencing

./: .pre-commit-config.yaml  LICENSE  README.md
src/: README.md  pyproject.toml  requirements.txt
src/data/: 50_data_points_from_alpaca.csv  README.md
src/data/ollama_testing/: hardware_metrics_log.csv  test.md
src/data/vllm_testing/: blog_reproduction_test.md  cloud_test.md  hardware_metrics_log.csv  local_test.md
src/notebooks/: 0_simple_inference_with_vllm.ipynb  1_prepare_inference_prompts_from_alpaca.ipynb  2_inference_with_ollama.ipynb  3_inference_with_vllm.ipynb  4_visualize_hardware_metrics.ipynb  4_visualize_metrics.ipynb
src/ollama_hosting/: README.md
src/scripts/: log_hardware_usage.py
src/vllm_hosting/: BLOG_REPRODUCTION.md  CLOUD.md  LOCAL.md  template_chat.jinja
