[project]
name = "vllm-inferencing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (<3.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "fsspec (>=2026.1.0,<2027.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.2,<5.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "torch-c-dlpack-ext>=0.1.5",
    "bitsandbytes>=0.49.1",
    "hf-transfer>=0.1.9",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2
